[package]
name = "dfh"
version = "0.1.2"
edition = "2021"
license = "MIT"
description = "Human-readable disk usage with colorized bars, physical disk grouping, and system volume annotations"
repository = "https://github.com/adamatan/dfh"
homepage = "https://github.com/adamatan/dfh"

[dependencies]
libc = "0.2"

[profile.release]
opt-level = "z"
lto = true
strip = true
panic = "abort"

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"

# Config for 'dist'
[workspace.metadata.dist]
cargo-dist-version = "0.31.0"
ci = "github"
installers = ["shell", "homebrew"]
tap = "adamatan/homebrew-tap"
publish-jobs = ["homebrew"]
targets = ["aarch64-apple-darwin", "aarch64-unknown-linux-gnu", "x86_64-apple-darwin", "x86_64-unknown-linux-gnu"]
pr-run-mode = "plan"
install-path = "CARGO_HOME"
install-updater = false
